--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -1,11 +1,10 @@
-
 * {
     padding: 0;
     margin: 0;
     background-color: #eeeeee;
 }
 
-.addMember-box {
+.editMember-box {
     top: 50%;
     left: 50%;
     position: absolute;
@@ -13,12 +12,12 @@
     width: 500px;
 }
 
-.addMember-box h2 {
+.editMember-box h1 {
     font-size: 20px;
     margin-bottom: 15px;
 }
 
-.addMember-box input {
+.editMember-box input {
     width: 100%;
     height: 50px;
     padding: 0 20px;
@@ -27,12 +26,12 @@
     border: 1px solid #86b0b6;
 }
 
-.addMember-box input:focus {
+.editMember-box input:focus {
     border: 1px solid #000;
     outline: 0;
 }
 
-.addMember-box textarea {
+.editMember-box textarea {
     width: 100%;
     height: 150px;
     padding: 15px 20px;
@@ -41,12 +40,12 @@
     border: 1px solid #6b7280;
 }
 
-.addMember-box textarea:focus {
+.editMember-box textarea:focus {
     border: 1px solid #000;
     outline: 0;
 }
 
-.addMember-box button {
+.editMember-boxbutton {
     border: 0;
     padding: 10px 30px;
     background: #86b0b6;
@@ -55,7 +54,7 @@
     color: #ffffff;
 }
 
-.addMember-box button:hover {
+.editMember-box button:hover {
     background-color: #718a8e;
     cursor: pointer;
 }
@@ -73,5 +72,3 @@ button:hover {
     background-color: #718a8e;
     cursor: pointer;
 }
-
-
