--- a/public/css/index.css
+++ b/public/css/index.css
@@ -46,6 +46,14 @@ li{
     display: inline-block;
     font-size: 20px;
 }
+.header{
+color: white;
+    background-color: #1a202c;
+}
+
+.fa-color{
+    background-color: #1a202c;
+}
 
 
 
